Refacor build.sbt, add scalaFMT, scalastyle and sbt-coverage, add coverage check